WIP working on open save automation via Makefile, bash and jq

--- a/404.md
+++ b/404.md
@@ -5,6 +5,6 @@ layout: default
 {%
   include image/image.html
   classes="is-circle-256"
-  src="assets/images/site/error.png"
+  src="assets/images/error.png"
   description="That's a whoopsie!"
 %}
